; ModuleID = '/home/carl/AnghaBench/h2o/deps/klib/test/extr_khash_test.c_ht_timing.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/klib/test/extr_khash_test.c_ht_timing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"[ht_timing] %.3lf sec\0A\00", align 1
@CLOCKS_PER_SEC = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ht_timing(void ()* %0) #0 {
  %2 = alloca void ()*, align 8
  %3 = alloca i64, align 8
  store void ()* %0, void ()** %2, align 8
  %4 = call i64 (...) @clock()
  store i64 %4, i64* %3, align 8
  %5 = load void ()*, void ()** %2, align 8
  call void %5()
  %6 = call i64 (...) @clock()
  %7 = load i64, i64* %3, align 8
  %8 = sub nsw i64 %6, %7
  %9 = sitofp i64 %8 to double
  %10 = load double, double* @CLOCKS_PER_SEC, align 8
  %11 = fdiv double %9, %10
  %12 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), double %11)
  ret void
}

declare dso_local i64 @clock(...) #1

declare dso_local i32 @printf(i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
